Update tox.ini: also test on PEP8

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist = py35
 
 [testenv]
 deps =
-    pytest
+	pytest
+	pytest-flake8
 commands =
-    pytest
+    pytest --doctest-modules --flake8
