Add pytest-pylint to test code quality

--- a/tox.ini
+++ b/tox.ini
@@ -10,5 +10,7 @@ envlist = py35
 deps =
 	pytest
 	pytest-flake8
+	pytest-pylint
 commands =
     pytest --doctest-modules --flake8
+    pytest --pylint --ignore-glob='*__*__.py' --ignore-glob=setup.py
