--- a/tox.ini
+++ b/tox.ini
@@ -13,4 +13,5 @@ deps =
 	pytest-pylint
 commands =
     pytest --doctest-modules --flake8
-    pytest --pylint --ignore-glob='*__*__.py' --ignore-glob=setup.py
+    pylint --ignore=__main__.py hai
+    pylint --disable=C0111 test
