Implement first version of create-users

--- a/example_config/users.cfg
+++ b/example_config/users.cfg
@@ -1,20 +1,21 @@
-shell = "/bin/bash"
-groups = "audio video plugdev netdev lpadmin sudo"
-encrypt_home = False
-no_create_home = False
-disabled_password = False
-disabled_login = False
-
 [user 1]
-user = 'user1'
+user = user1
 uid = 1000
 gid = 1000
-home = '/home/user1'
+home = /home/user1
 #password = ""
+shell = /bin/bash
+groups = audio video plugdev netdev lpadmin sudo
+encrypt-home = False
+no-create-home = False
+disabled-password = False
+disabled-login = False
 
 [user 2]
-user = 'user2'
+user = user2
 uid = 1001
 gid = 1001
-home = '/home/user2'
-disabled_login = True
+home = /home/user2
+disabled-login = True
+shell = /bin/bash
+groups = audio video plugdev netdev lpadmin sudo
