Fix configuration of user groups

--- a/example_config/users.cfg
+++ b/example_config/users.cfg
@@ -5,7 +5,7 @@ gid = 1000
 home = /home/user1
 #password = ""
 shell = /bin/bash
-groups = audio video plugdev netdev lpadmin sudo
+groups = audio,video,plugdev,netdev,lpadmin,sudo
 encrypt-home = False
 no-create-home = False
 disabled-password = False
@@ -18,4 +18,4 @@ gid = 1001
 home = /home/user2
 disabled-login = True
 shell = /bin/bash
-groups = audio video plugdev netdev lpadmin sudo
+groups = audio,video,plugdev,netdev,lpadmin,sudo
